# pybind_boilerplate

./: .gitignore  CMakeLists.txt  README.md  hoe.txt  pybind_wrapper.cpp  setup.py  wij_testen.py
include/glad/: gl.h
src/: mijnlib.cpp  mijnlib.h  render.cpp  render.h
